openshift/np.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress-map-geowebcache
  namespace: 264e6f-dev
spec:
  podSelector:
    matchLabels:
      role: geowebcache
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
